# rust-tensors

./: README.md
layer_norm/: Cargo.toml
layer_norm/benches/: benchmark.rs  layer_bench.rs
layer_norm/src/: ViT.rs  activations.rs  aligned_f32.rs  conv2d.rs  conv2d512.rs  layernorm.bend  layernorm.rs  lib.rs  linear.rs  linear512.rs  multihead_att.rs  opt_ViT.rs  parameter.rs
layer_norm/tests/: linear_tests.rs  tests.rs  verify_torch.py
matmul/src/: lib.rs
