[package]
name = "layer_norm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.5"
rand = "0.8"
approx = "0.5.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
criterion = "0.3"
ndarray = "0.15"

[[bench]]
name = "layer_bench"
harness = false

[features]
stdsimd = []